--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@ http://www.templatemo.com/tm-515-eatery
      <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
      <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
      <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
+     <link rel="stylesheet" href="css/main.css" />
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}">
@@ -43,49 +45,6 @@ http://www.templatemo.com/tm-515-eatery
      </section>
 
 
-     <!-- NAVBAR -->
-     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
-          <div style="margin-bottom: 50px" class="container">
-
-               <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                    </button>
-
-                    <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Eatery <span>.</span> Cafe</a>
-               </div>
-
-               <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="#" class="smoothScroll">Home</a></li>
-                         <li><a href="#about" class="smoothScroll">About</a></li>
-                         <li><a href="{% url 'create_dish' %}" class="smoothScroll">Create</a></li>
-                         <li><a href="#" class="smoothScroll">Menu</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                    </ul>
-     <!-- is Authenticated   -->
-      {% if user.is_authenticated %}
-        <div class="nav navbar-nav navbar-right">
-        <li><a class="smoothScroll" href="/logout">Logout</a></li>
-        <li><a class="smoothScroll" href="#">Welcome, {{user.username}}</a></li>
-        </div>
-
-      {% else %}
-      <div class="nav navbar-nav navbar-right">
-      <li><a class="smoothScroll" href="{% url 'register' %}">Sign Up</a></li>
-      <li><a class="smoothScroll" href="{% url 'login' %}">Log In</a></li>
-      </div>
-
-      {% endif %}
-      <!-- End is Authenticated  -->
-        </div>
-
-          </div>
-     </section>
 {% block content %}
 
 {% endblock %}
