--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,86 @@
 
 {% block content %}
 
+     <!-- NAVBAR -->
+     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+          <div style="margin-bottom: 50px" class="container">
+
+               <div class="navbar-header">
+                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                         <span class="icon icon-bar"></span>
+                         <span class="icon icon-bar"></span>
+                         <span class="icon icon-bar"></span>
+                    </button>
+
+                    <!-- lOGO TEXT HERE -->
+                    <a href="index.html" class="navbar-brand">Eatery <span>.</span> Cafe</a>
+               </div>
+
+               <!-- MENU LINKS -->
+               <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-nav-first">
+                         <li><a href="#" class="smoothScroll">Home</a></li>
+                         <li><a href="{% url 'create_dish' %}" class="smoothScroll">Create</a></li>
+                         <li><a href="#" class="smoothScroll">Menu</a></li>
+                    <li> <!--li tag for whole searchbar -->
+                     <form>
+                       <div style="display: flex; margin-top:15px" class="inner-form">
+                         <div class="input-field first-wrap">
+                           <div class="input-select">
+                             <select data-trigger="" name="choices-single-default">
+                               <option placeholder="">Category</option>
+                               {% for category in products %}
+                               <option>{{ category.name }}</option>
+                               {% endfor %}
+                             </select>
+                           </div>
+                         </div>
+                         <div class="input-field second-wrap">
+                           <input id="search" type="text" placeholder="Enter Keywords?" />
+                         </div>
+                         <div class="input-field third-wrap">
+                          <button class="btn-search" type="button"> Search
+<!--                               <svg class="svg-inline&#45;&#45;fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">-->
+<!--                               <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>-->
+<!--                             </svg>-->
+                           </button>
+                           </div>
+                         </div>
+                       </form>
+
+<!--                    End Searchbar -->
+                   <script src="js/extention/choices.js"></script>
+                   <script>
+                     const choices = new Choices('[data-trigger]',
+                     {
+                       searchEnabled: false,
+                       itemSelectText: '',
+                     });
+
+                   </script>
+                   </li>
+
+                    </ul>
+     <!-- is Authenticated   -->
+      {% if user.is_authenticated %}
+        <div class="nav navbar-nav navbar-right">
+        <li><a class="smoothScroll" href="/logout">Logout</a></li>
+        <li><a class="smoothScroll" href="#">Welcome, {{user.username}}</a></li>
+        </div>
+
+      {% else %}
+      <div class="nav navbar-nav navbar-right">
+      <li><a class="smoothScroll" href="{% url 'register' %}">Sign Up</a></li>
+      <li><a class="smoothScroll" href="{% url 'login' %}">Log In</a></li>
+      </div>
+
+      {% endif %}
+      <!-- End is Authenticated  -->
+        </div>
+
+          </div>
+     </section>
+
      <!-- HOME -->
      <section id="home" class="slider" data-stellar-background-ratio="0.5">
           <div class="row">
@@ -47,8 +127,7 @@
                                         <div class="menu-item">
                                              <h1>HELLO</h1>
                                              <h3>{{ category.name }}</h3>
-<!--                                             <img src="{{ category.image.url }}" alt="">-->
-<!--                                             <p>Tomato / Eggs / Sausage</p>-->
+
                                         </div>
 
                                    </div>
@@ -60,11 +139,6 @@
                </div>
           </div>
      </section>
-
-<!--{% for category in categories %}-->
-<!--     {{ category.name }}-->
-<!--     {% endfor %}-->
-
 
      <section id="menu" data-stellar-background-ratio="0.5">
           <div class="container">
