--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
-
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh" class="container py-5">
 
-	<form method="POST">
+	<form method="POST" enctype="multipart/form-data">
 		<h1>Register</h1>
-		{% csrf_token %}
 		{{ register_form|crispy }}
+		{% csrf_token %}
+
 
 		<button class="btn btn-primary" type="submit">Register</button>
 	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
