--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -8,7 +8,7 @@
 
 	<form method="POST" enctype="multipart/form-data">
 		<h1>Register</h1>
-		{{ register_form|crispy }}
+		{{ form }}
 		{% csrf_token %}
 
 
