--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
 
   <form method="POST" enctype="multipart/form-data">
       <h1>Login</h1>
-    {{ login_form|crispy }}
+    {{ form }}
     {% csrf_token %}
     <br>
     <button class="btn btn-primary" type="submit">Login</button>
