--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -10,7 +10,7 @@
 		{% csrf_token %}
 
 		<button class="btn btn-primary" type="submit">Register</button>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p class="text-center">If you already have an account, <a href="/account/login">login</a> instead.</p>
 	</form>
 
 	</div>
