--- a/templates/home.html
+++ b/templates/home.html
@@ -14,43 +14,26 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="{% url 'home' %}" class="navbar-brand">Eatery <span>.</span> Cafe</a>
+                    <a href="{% url 'home' %}" class="navbar-brand">Купи <span>.</span> Поесть</a>
                </div>
 
                <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
+               <div style="display: flex; width:1200px; height: auto" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="#" class="smoothScroll">Home</a></li>
+                         <li><a href="#" class="smoothScroll">Домой</a></li>
                         {% if request.user.is_authenticated and request.user.is_superuser %}
-                         <li><a href="{% url 'create_dish' %}" class="smoothScroll">Create</a></li>
+                         <li><a href="{% url 'create_dish' %}" class="smoothScroll">Добавить блюдо</a></li>
                         {% endif %}
-                         <li><a href="#" class="smoothScroll">Menu</a></li>
+                         <li><a href="#" class="smoothScroll">Меню</a></li>
                     <li> <!--li tag for whole searchbar -->
-                     <form>
-                       <div style="display: flex; margin-top:15px" class="inner-form">
-                         <div class="input-field first-wrap">
-                           <div class="input-select">
-                             <select data-trigger="" name="choices-single-default">
-                               <option placeholder="">Category</option>
-                               {% for category in categories %}
-                               <option>{{ category.name }}</option>
-                               {% endfor %}
-                             </select>
-                           </div>
-                         </div>
-                         <div class="input-field second-wrap">
-                           <input id="search" type="text" placeholder="Enter Keywords?" />
-                         </div>
-                         <div class="input-field third-wrap">
-                          <button class="btn-search" type="button"> Search
 
-                           </button>
-                           </div>
-                         </div>
-                       </form>
+                    <form style="display: flex; margin-top:9px ;margin-left:30px" class="d-flex" method="get" action="{% url 'search' %}">
+
+                    <input name="q" class="form-control me-2" type="search" placeholder="что поесть?" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Поиск</button>
+                    </form>
 
 <!--                    End Searchbar -->
-                         <li><a href="{% url 'cart_detail' %}"><img style="width: 30px ;height: auto;" src="{% static 'cart/carts.png' %}" ></a></li>
 
                    <script src="js/extention/choices.js"></script>
                    <script>
@@ -66,15 +49,19 @@
                     </ul>
      <!-- is Authenticated   -->
       {% if user.is_authenticated %}
-        <div class="nav navbar-nav navbar-right">
-        <li><a class="smoothScroll" href="{% url 'logout' %}">Logout</a></li>
-        <li><a class="smoothScroll" href="#">Welcome, {{user.username}}</a></li>
+
+        <div style="display: flex; margin-left:20px; " class="nav navbar-nav navbar-right">
+        <a href="{% url 'cart_detail' %}"><img style="width: 30px ;height: auto; margin-top: 10px; margin-right: 20px" src="{% static 'cart/carts.png' %}" ></a>
+
+
+        <li><a class="smoothScroll" href="{% url 'logout' %}">Выйти</a></li>
+        <li><a class="smoothScroll" href="#">Привет, {{user.username}}</a></li>
         </div>
 
       {% else %}
       <div class="nav navbar-nav navbar-right">
-      <li><a class="smoothScroll" href="{% url 'register' %}">Sign Up</a></li>
-      <li><a class="smoothScroll" href="{% url 'login' %}">Log In</a></li>
+      <li><a class="smoothScroll" href="{% url 'register' %}">Зарегистрироваться</a></li>
+      <li><a class="smoothScroll" href="{% url 'login' %}">Войти</a></li>
       </div>
 
       {% endif %}
@@ -93,9 +80,9 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
-                                             <h3>Eatery Cafe &amp; Restaurant</h3>
-                                             <h1>Our mission is to provide an unforgettable experience</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet our chef</a>
+                                             <h3>Bishkek Food &amp; Delivery</h3>
+                                             <h1>Пять лучших кухни города на любой вкус!</h1>
+                                             <a href="#menu1" class="section-btn btn btn-default smoothScroll">Заказать</a>
                                         </div>
                                    </div>
                               </div>
@@ -106,24 +93,24 @@
 
 <!--  MENU-->
 
-
+    <div style="background-image: {{ menu_backgroundimg.jpeg }}">
      <section id="menu" data-stellar-background-ratio="0.5">
           <div class="container">
-               <div class="row">
+            <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+              {% for category in categories %}
+                   <div style="display: flex; text-align: center; align-items: center; margin:15px" class="card" style="width: 150rem;" align="center">
 
-                   <div class="card" style="width: 150rem;" align="center">
-                          {% for category in categories %}
                           <a href="{% url 'list' category.slug %}"><br>
-                               <h2>{{ category.name }}</h2>
-                               <img src="{{ category.image.url }}" alt="" style="width: 300px; height: auto;"><br>
+                               <h4>{{ category.name }}</h4>
+                               <img src="{{ category.image.url }}" alt="" style="width: 250px; height: auto;"><br>
                                <br>
                           </a>
                           {% endfor %}
                    </div>
-
-               </div>
+                </div>
           </div>
      </section>
+     </div>
 
 
  <!-- FOOTER -->
