fixed cart add bug

--- a/templates/list_dish.html
+++ b/templates/list_dish.html
@@ -29,7 +29,7 @@
     <h2 class="card-title">{{ product.name }}</h2>
       <h4 class="card-title">{{ product.description }}</h4>
     <p class="card-text">{{ product.price }} сом</p>
-      <a class="btn btn-success" href="{% url 'cart_add' dish.id %}" role="button">Add to cart</a>
+      <a class="btn btn-success" href="{% url 'cart_add' product.id %}" role="button">Add to cart</a>
     <br><br>
       {% if request.user.is_authenticated and request.user.is_superuser %}
     <a class="btn btn-warning" href="{% url 'update_dish' product.id %}" role="button">Update</a>
