--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
 
 <!--                    End Searchbar -->
 
-                   <script src="js/extention/choices.js"></script>
+                   <script src="{% static 'js/extention/choices.js' %}"></script>
                    <script>
                      const choices = new Choices('[data-trigger]',
                      {
