pre-final version, woth no comments section

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,19 +1,34 @@
-{% extends "base.html" %}
+{% extends "home.html" %}
 {% block content %}
 
+{% load socialaccount %}
+{% load static %}
 
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh" class="container py-5">
+<div class="container mx-5">
+<h3 align="center">Войти</h3>
 
-	<form method="POST" enctype="multipart/form-data">
-		<h1>Register</h1>
-		{{ form }}
-		{% csrf_token %}
+  <div class=" signin text-center">
 
-		<button class="btn btn-primary" type="submit">Register</button>
-	<p class="text-center">If you already have an account, <a href="/account/login">login</a> instead.</p>
-	</form>
+    <a href="{% provider_login_url 'google' %}" class="text-dark"><img src="{% static 'images/GButton.jpeg' %}" style="width:20rem; height:auto"></a>
+  </div>
 
-	</div>
+  <br><br>
+
+  <div style="width: 100%; height: 15px; border-bottom: 1px solid lightgray; text-align: center">
+    <span class="text-muted" style="margin-top:-15% !important; font-size: 11px; background-color: white; padding: 0px 10px;">
+      ИЛИ
+    </span>
+  </div>
+
+  <br><br>
+
+  <form method="post">
+    {% csrf_token %}
+    {{ form }}
+    <button type="submit"  class="btn btn-primary">Регистрация</button>
+
+  </form>
+
 </div>
 
 {% endblock %}
