--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<!--Login--> 
+
+
+<!--Login-->
+
+
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh" class="container py-5">
 
   <form method="POST" enctype="multipart/form-data">
@@ -12,7 +16,7 @@
     <button class="btn btn-primary" type="submit">Login</button>
     <br>
     <br>
-      <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
+      <p class="text-center">Don't have an account? <a href="/account/register">Create an account</a>.</p>
   </form>
 
 </div>
