--- a/templates/create_dish.html
+++ b/templates/create_dish.html
@@ -1,12 +1,13 @@
 {% extends 'home.html' %}
 {% block content %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<div style="">
-<!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-  <form method="post" enctype="multipart/form-data">
-  {{ dish_form.as_p }}
+
+  <form style="margin:30px; background-image: url(static/testimonial-bg.jpg) " method="post" enctype="multipart/form-data">
+  {{ product_form.as_p }}
   {% csrf_token %}
-  <button type="submit" class="btn btn-success">Create</button>
+  <button type="submit" class="btn btn-success">Создать блюдо</button>
   </form>
 </div>
 {% endblock %}
