--- a/templates/list_dish.html
+++ b/templates/list_dish.html
@@ -29,11 +29,11 @@
     <h2 class="card-title">{{ product.name }}</h2>
       <h4 class="card-title">{{ product.description }}</h4>
     <p class="card-text">{{ product.price }} сом</p>
-      <a class="btn btn-success" href="{% url 'cart_add' product.id %}" role="button">Add to cart</a>
+      <a class="btn btn-success" href="{% url 'cart_add' product.id %}" role="button">Добавить в корзину</a>
     <br><br>
       {% if request.user.is_authenticated and request.user.is_superuser %}
-    <a class="btn btn-warning" href="{% url 'update_dish' product.id %}" role="button">Update</a>
-    <a class="btn btn-danger" href="{% url 'delete_dish' product.id %}" role="button">Delete</a>
+    <a class="btn btn-warning" href="{% url 'update_dish' product.id %}" role="button">Изменить</a>
+    <a class="btn btn-danger" href="{% url 'delete_dish' product.id %}" role="button">Удалить</a>
     {% endif %}
     <hr>
 
