--- a/templates/home.html
+++ b/templates/home.html
@@ -87,7 +87,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Bishkek Food &amp; Delivery</h3>
                                              <h1>Лучшие кухни города на любой вкус!</h1>
-                                             <a href="#menu1" class="section-btn btn btn-default smoothScroll">Заказать</a>
+                                             <a href="/home" class="section-btn btn btn-default smoothScroll">Заказать</a>
                                         </div>
                                    </div>
                               </div>
@@ -98,7 +98,7 @@
 
 <!--  MENU-->
 
-    <div style="background-image: {{ menu_backgroundimg.jpeg }}">
+    <div style="background-image: menu_backgroundimg.jpeg">
      <section id="menu" data-stellar-background-ratio="0.5">
           <div class="container">
             <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
